Version 4.1.0   unreleased

    * Add new service ProcessBuilderService.
    * Add FilesystemService to wrap FilesystemUtils in a way that's easier to inject.
    * Add FilesystemUtils.getGlobContents() and related method in FilesystemService.
    * Add PropertiesUtils.getMatchingPrefixes() and PropertiesUtils.getMatchingChildren().

Version 4.0.1   27 Jan 2014

    * Add a hack into build.gradle so that source jars get included in Eclipse .classpath if available.
    * Make a few methods on PropertyBasedConfig protected, to make it easier to extend.

Version 4.0.0   16 Jan 2014

    * Bump to 4.0.0 due to interface changes.
    * Improve GwtLocalizationUtils so it deals transparently with unknown/invalid constants.
    * Revamp exception hierarchy to make an abtracted exception context available in all exceptions.
    * Make GwtExceptionUtils smart enough to use exception context for stack trace, if it exists.

Version 3.5.0   06 Jan 2014

    * Bump up to GIN 2.1.2, which allows CedarCommon to be used with GWT 2.6.0 RC3.

Version 3.4.4   03 Jan 2014

    * Add support for UnifiedEvent with DEFAULT_EVENT, since the type is often not used.
    * Add new UnifiedEventType KEY_EVENT to be associated with key-related handlers.
    * Improve GwtResourceCreator to deal with messages that contain parameters like {0}.
    * Add methods on DateUtils and GwtDateUtils to support formatting time only, no date.
    * Add new TimeOnlyColumn for use with DataTable, using new GwtDateUtils functionality.

Version 3.4.3   01 Jan 2014

    * Fix XsrfRpcProxyCreator so it doesn't cause compiler errors if RPCs have overloaded methods.

Version 3.4.2   30 Dec 2013

    * Upgrade to CedarBuild v0.8.9, to allow configuring memory for tests.
    * Enhance ServiceException and create ServiceExceptionUtils, to allow for a translatable RootCause.

Version 3.4.1   06 Dec 2013

    * Bump up to AppEngine v1.8.8, since v1.8.4 is getting kind of old.